--- a/desafios/desafio012 - cordel/estilo/style.css
+++ b/desafios/desafio012 - cordel/estilo/style.css
@@ -57,6 +57,10 @@ section {
     font-size: 1.5em;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 section.normal {
     background-color: white;
     color: black;
@@ -65,11 +69,24 @@ section.normal {
 section.imagem {
     background-color: rgb(63, 63, 63);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.466);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     width: 400px;
-    background-color: rgba(0, 0, 0, 0.137);
+    background-color: rgba(0, 0, 0, 0.479);
+    padding-left: 15px;
+}
+
+section#img1 {
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+}
+
+section#img2 {
+    background-image: url(../imagens/background002.jpg);
 }
 
 footer {
